<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilUser">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editProfil_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Edit Profil"
        android:elevation="8dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="20dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingBottom="50dp" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp" >

                <ImageView
                    android:id="@+id/editProfil_foto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/profile_2"
                    android:contentDescription="@string/profile_picture"
                    android:background="@drawable/profile_photo_background" />
                <ImageButton
                    android:id="@+id/editProfil_btnEditFoto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="@id/editProfil_foto"
                    app:layout_constraintEnd_toEndOf="@id/editProfil_foto"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="@string/edit"
                    android:background="@drawable/profile_photo_background" />

                <ProgressBar
                    android:id="@+id/editProfil_progressUploadFoto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editProfil_foto"
                    android:layout_marginTop="10dp"
                    android:indeterminate="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person"
                android:hint="Nama Lengkap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfil_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                android:hint="@string/email_address" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfil_alamatEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_call"
                android:hint="@string/tel_number"
                app:prefixText="(+62) - " >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfil_noTelepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/editProfil_btnShowEditPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="Ubah Password"
                android:textColor="@color/darkBlue"/>

            <LinearLayout
                android:id="@+id/editProfil_ubahPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/picture_background">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="Password Lama"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editProfil_passwordLama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="Minimal 8 karakter campuran huruf dan angka"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="Password Baru"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editProfil_passwordBaru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionNext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextBaseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_password"
                    android:hint="@string/confirm_password"
                    app:passwordToggleEnabled="true" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editProfil_konfirmasiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:imeOptions="actionDone" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/editProfil_btnEditPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="Ubah"
                    android:textColor="@color/darkBlue" />

            </LinearLayout>
            <Button
                android:id="@+id/editProfil_btnEditProfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Edit" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>