...
                        android:src="@drawable/ic_profile"
                        android:contentDescription="@string/profile_picture"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <ImageButton
                        android:id="@+id/profilUser_btnEdit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/ic_edit"
                        android:contentDescription="@string/edit_profile"
...
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_edit_location"
                        android:contentDescription="@string/edit_address"
                        android:tint="@color/white"
                        android:backgroundTint="@color/transparent" />
                    <TextView
                        android:id="@+id/profilUser_namaUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/profile_picture"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
...
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="40dp"
                        android:text="@string/registered_email"
                        android:textColor="@color/white"
                        android:fontFamily="@font/dmsans_regular" />
                    <TextView
                        android:id="@+id/profilUser_emailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/profilUser_namaUser"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="40dp"
...
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="40dp"
                        android:text="@string/tel_number"
                        android:textColor="@color/white"
                        android:fontFamily="@font/dmsans_regular" />
                    <TextView
                        android:id="@+id/profilUser_noTelpUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/profilUser_emailUser"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
...
