<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.LoginActivity">

    <View
        android:id="@+id/topLogo"
        android:layout_width="427dp"
        android:layout_height="382dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-79dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-193dp"
        android:background="@drawable/top_rounc_background_lightblue"/>
    <TextView
        android:layout_width="217dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/serviceaja"
        style="@style/serviceaja"
        android:gravity="top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLogo"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Masuk ke Akun Anda"
                android:textSize="25sp"
                android:fontFamily="@font/poppins_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                android:hint="@string/email_address"
                style="@style/editTextBaseStyle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/halamanLogin_inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                style="@style/editTextBaseStyle"
                app:passwordToggleEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/halamanLogin_inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword"
                    android:imeOptions="actionSend"
                    android:imeActionLabel="Masuk" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/halamanLogin_btnLupaPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lupa_password"
                android:textColor="@color/lightBlue"
                android:fontFamily="@font/poppins_medium"
                android:onClick="forget"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/halamanLogin_btnMasuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/masuk"
                android:backgroundTint="@color/gray"
                app:cornerRadius="15dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"/>
            <ProgressBar
                android:id="@+id/halamanLogin_progressLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instantregister"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="50dp"
                    android:scaleType="fitCenter"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/google_logo"
                    android:contentDescription="Masuk dengan Google"
                    android:onClick="loginGmail"
                    tools:ignore="HardcodedText" />
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/facebook_logo"
                    android:contentDescription="Masuk dengan Facebook"
                    android:onClick="loginFB"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="Belum Punya Akun?"
                    android:fontFamily="@font/poppins_medium"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/halamanLogin_btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightBlue"
                    android:text="@string/daftar_sekarang"
                    android:fontFamily="@font/poppins_medium" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>