<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeIcon"
        android:icon="@drawable/ic_home"
        android:title="Home"/>

    <item
        android:id="@+id/historyIcon"
        android:icon="@drawable/ic_history"
        android:title="Transaksi"/>

    <item
        android:id="@+id/cartIcon"
        android:icon="@drawable/ic_shopping_cart"
        android:title="Keranjang"/>

    <item
        android:id="@+id/chatIcon"
        android:icon="@drawable/ic_chat_message"
        android:title="Pesan"/>

    <item
        android:id="@+id/profileIcon"
        android:icon="@drawable/ic_profile"
        android:title="Profil"/>

</menu>